# WebSiteAnalyzer

./: .gitignore  CMakeLists.txt  README.md
Common/: CMakeLists.txt
Common/include/: common.h  stdlibs.h
Common/src/: common.cpp
Crawler/: CMakeLists.txt
Crawler/include/: crawler_controller.h  crawler_model.h  crawler_settings.h  menu.h  message_types.h
Crawler/src/: crawler_controller.cpp  crawler_model.cpp  crawler_settings.cpp
Gumbo/: CMakeLists.txt  char_ref.c  error.c  parser.c  tag.c  tokenizer.c  utf8.c  vector.c
HtmlParser/: CMakeLists.txt
HtmlParser/include/: attribute.h  headers.h  tag.h  tag_parser.h  tag_parser_private.h  url.h
HtmlParser/src/: attribute.cpp  tag.cpp  tag_parser.cpp  tag_parser_private.cpp  url.cpp
HttpLib/: CMakeLists.txt
HttpLib/include/: http_connection.h  http_response.h
HttpLib/src/: http_connection.cpp  http_response.cpp
WebSiteAnalyzer/: CMakeLists.txt
WebSiteAnalyzer/include/: application.h  crawler_module_wrapper.h  crawler_worker.h  duplicated_descriptions_model.h  duplicated_titles_model.h  empty_descriptions_model.h  empty_titles_model.h  external_urls_model.h  main_frame.h  message_mapper.h  pages_404_model.h  start_address_dialog.h  start_settings_dialog.h  stdlibs.h  urls_crawler_model.h
WebSiteAnalyzer/rcc/: main_frame.qrc
WebSiteAnalyzer/src/: application.cpp  crawler_worker.cpp  duplicated_descriptions_model.cpp  duplicated_titles_model.cpp  empty_descriptions_model.cpp  empty_titles_model.cpp  external_urls_model.cpp  main.cpp  main_frame.cpp  message_mapper.cpp  pages_404_model.cpp  start_address_dialog.cpp  start_settings_dialog.cpp  urls_crawler_model.cpp
WebSiteAnalyzer/ui/: continue_crawling_dialog.ui  main_frame.ui  start_address_dialog.ui  start_settings_dialog.ui
gumbo/: CMakeLists.txt  tag_sizes.h
html_parser/: CMakeLists.txt
html_parser/include/: attribute.h  common.h  headers.h  tag.h  tag_parser.h  url.h
html_parser/src/: common.cpp  tag_parser.cpp  tag_parser_private.cpp  url.cpp
http_lib/: CMakeLists.txt
http_lib/include/: http_connection.h  http_request.h  http_response.h
http_lib/src/: http_connection.cpp  http_request.cpp  http_response.cpp
include/: Crawler.h  any.h  crawler_base.h  crawler_controller.h  crawler_model.h  crawler_settings.h  general_helper_functions.h  imessage_receiver.h  menu.h  message_types.h  messager.h  stdlibs.h
src/: Crawler.cpp  Main.cpp  Menu.cpp  crawler_base.cpp  crawler_controller.cpp  crawler_model.cpp  general_helper_functions.cpp  messager.cpp
view_handler/include/: console_crawler_viewer.h  crawler_viewer.h
view_handler/src/: console_crawler_viewer.cpp
